# papercraft

./: .gitmodules  Cargo.toml  LICENSE  README.md  inverse.sage  inverse.sage.py  static.ipynb
benches/: modular_reduction.rs
reports/: A-L.txt  A-M.txt  A-S.txt  A-XL.txt  B-L.txt  B-M.txt  B-S.txt  C-L.txt  C-M.txt  C-S.txt
src/: arithmetic.rs  helpers.rs  main.rs  protocol.rs  translation_layer.rs  vdf.rs
src/custom_ring/: mod.rs  ring.rs  static.rs  static_generated_24.rs
src/slow_ntt/: convolution.rs  mod.rs  ntt.rs  root_of_unity.rs
src/subroutines/: crs.rs  decomp.rs  fold.rs  mod.rs  norm_first_round.rs  norm_second_round.rs  split.rs  verifier.rs
src/vdf_reference/: fast_prime_ring.rs  main.rs  poly_arithmetic_i128.rs  protocol.rs
